2011-01-21  Richard Henderson  <rth@redhat.com>

	* config/rx/rx.c (TARGET_FLAGS_REGNUM): New.

	* config/mn10300/mn10300.c (TARGET_FLAGS_REGNUM): New.

	* compare-elim.c: New file.
	* Makefile.in (OBJS-common): Add it.
	(compare-elim.o): New.
	* common.opt (fcompare-elim): New.
	* opts.c (default_options_table): Add OPT_fcompare_elim.
	* tree-pass.h (pass_compare_elim_after_reload): New.
	* passes.c (init_optimization_passes): Add it.
	* recog.h: Protect against re-inclusion.
	* target.def (TARGET_FLAGS_REGNUM): New POD hook.
	* doc/invoke.texi (-fcompare-elim): Document it.
	* doc/tm.texi.in (TARGET_FLAGS_REGNUM): Document it.
	* doc/tm.texi: Rebuild.

2011-01-22  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.md (cstoresf4): Pass comparison operator to
	rx_split_fp_compare.

2011-01-22  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.md (UNSPEC_CONST): New.
	(deallocate_and_return): Wrap the amount popped off the stack in
	an UNSPEC_CONST in order to stop it being rejected by
	-mmax-constant-size.
	(pop_and_return): Add a "(return)" rtx.
	(call): Drop the immediate operand.
	(call_internal): Likewise.
	(call_value): Likewise.
	(call_value_internal): Likewise.
	(sibcall_internal): Likewise.
	(sibcall_value_internal): Likewise.
	(sibcall): Likewise.  Generate an explicit call using
	sibcall_internal.
	(sibcall_value): Likewise.
	(mov<>): FAIL if a constant operand is not legitimate.
	(addsi3_unpsec): New pattern.

	* config/rx/rx.c (rx_print_operand_address): Handle UNPSEC
	CONSTs.
	(ok_for_max_constant): New function.
	(gen_safe_add): New function.
	(rx_expand_prologue): Use gen_safe_add.
	(rx_expand_epilogue): Likewise.
	(rx_is_legitimate_constant): Use ok_for_max_constant.  Handle
	UNSPEC CONSTs.

2011-01-21  Jeff Law  <law@redhat.com>

	PR tree-optimization/47053
	* tree-ssa-dse.c (need_eh_cleanup): New bitmap.
	(dse_optimize_stmt): Set the appropriate bit in NEED_EH_CLEANUP when
	statements are deleted.